--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,36 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer components {
+  h2 {
+    @apply text-5xl font-semibold tracking-tight sm:text-7xl;
+  }
+
+  p {
+    @apply mt-8 text-pretty font-medium sm:text-xl/8;
+  }
+
+  .clip-background {
+    @apply relative isolate overflow-y-auto overflow-x-hidden bg-gray-900 py-16 sm:py-24 w-full;
+    height: calc(100vh - 80px);
+  }
+
+  .clip-background-color-first {
+    @apply aspect-[1097/845] w-full h-full bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20;
+    clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%);
+  }
+
+  .clip-background-color-first-holder {
+    @apply hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl w-full h-full;
+  }
+
+  .clip-background-color-second {
+    @apply aspect-[1097/845] w-full h-full bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-20;
+    clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%);
+  }
+
+  .clip-background-color-second-holder {
+    @apply absolute -top-52 left-1/2 -z-10 -translate-x-1/2 transform-gpu blur-3xl sm:top-[-28rem] sm:ml-16 sm:translate-x-0 sm:transform-gpu w-full h-full;
+  }
+}
