--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
   }
 
   p {
-    @apply mt-8 text-pretty font-medium sm:text-xl/8;
+    @apply text-pretty font-medium sm:text-xl/8;
   }
 
   .body-height {
