--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,4 +68,20 @@ body {
   .animate-bounce-horizontal {
     animation: bounce-horizontal 2s infinite;
   }
+
+  .bounce-dot {
+    display: inline-block;
+    font-size: 24px;
+    animation: bounce 1s infinite;
+  }
+
+  @keyframes bounce {
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+  }
 }
